# autodeck

./: .travis.yml  Cargo.toml  README.md  autodeck.env  autodeck.service  basic.toml  example.toml
scripts/: failure.sh  sometimes-stdout.sh  sometimes.sh  success.sh
src/: automata.rs  lib.rs  main.rs
