[package]
name = "autodeck"
description = "Elgato StreamDeck based Automation Software"
repository = "https://github.com/ryankurte/autodeck"
readme = "README.md"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
humantime = "1.3.0"
serde = { version = "1.0.104", features = [ "derive" ] }
toml = "0.5.5"
streamdeck = "0.1.0"
tracing = "0.1.11"
tracing-subscriber = "0.1.6"

[patch.crates-io]
streamdeck = { path = "../streamdeck" }
