[package]
name = "autodeck"
description = "Elgato StreamDeck based Automation Software"
repository = "https://github.com/ryankurte/autodeck"
readme = "README.md"
version = "0.4.0"
authors = ["ryan <ryan@kurte.nz>"]
license = "GPL-3.0-or-later"
edition = "2018"

[package.metadata.deb]
priority = "optional"
depends = "$auto, systemd, openssl"
assets = [
    ["target/release/autodeck", "/usr/bin/autodeck", "0755"],
    ["basic.toml", "/etc/autodeck/autodeck.toml", "0644"],
    ["autodeck.env", "/etc/autodeck/", "0644"],
    ["autodeck.service", "/lib/systemd/system/", "0644"],
    ["40-streamdeck.rules", "/etc/udev/rules.d/", "0644"],
]
conf-files = [
  "/etc/autodeck/autodeck.toml",
  "/etc/autodeck/autodeck.env",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
humantime = "1.3.0"
serde = { version = "1.0.104", features = [ "derive" ] }
toml = "0.5.5"
tracing = "0.1.11"
tracing-subscriber = "0.1.6"

[dependencies.streamdeck]
version = "0.4.0"
features = [ "serde" ]

[patch.crates-io]
#streamdeck = { path = "../streamdeck" }
